3822B1PE4/9_gelu_ocl/salaev_vladislav/log.txt
In file included from /usr/include/CL/cl.h:20,
                 from /home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/salaev_vladislav/gelu_ocl.cpp:2:
/usr/include/CL/cl_version.h:22:104: note: ‘#pragma message: cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)’
   22 | #pragma message("cl_version.h: CL_TARGET_OPENCL_VERSION is not defined. Defaulting to 300 (OpenCL 3.0)")
      |                                                                                                        ^
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/salaev_vladislav/gelu_ocl.cpp: In function ‘void initOpenCL(int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/salaev_vladislav/gelu_ocl.cpp:48:33: warning: ‘_cl_command_queue* clCreateCommandQueue(cl_context, cl_device_id, cl_command_queue_properties, cl_int*)’ is deprecated [-Wdeprecated-declarations]
   48 |     queue = clCreateCommandQueue(context, device, 0, nullptr);
      |             ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/salaev_vladislav/gelu_ocl.cpp:2:
/usr/include/CL/cl.h:1906:1: note: declared here
 1906 | clCreateCommandQueue(cl_context                     context,
      | ^~~~~~~~~~~~~~~~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/salaev_vladislav/gelu_ocl.cpp:50:25: error: ‘strlen’ was not declared in this scope
   50 |     size_t sourceSize = strlen(kernelSource);
      |                         ^~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE4/9_gelu_ocl/salaev_vladislav/gelu_ocl.cpp:4:1: note: ‘strlen’ is defined in header ‘<cstring>’; did you forget to ‘#include <cstring>’?
    3 | #include <string>
  +++ |+#include <cstring>
    4 | #include <vector>
